--- a/src/main/resources/com/juanite/main.fxml
+++ b/src/main/resources/com/juanite/main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.ImageView?>
@@ -43,5 +44,6 @@
             <TableColumn fx:id="tc_documentNumeric" prefWidth="54.0" text="Numeric" />
          </columns>
       </TableView>
+      <ProgressBar fx:id="pb_print" layoutX="221.0" layoutY="315.0" prefHeight="18.0" prefWidth="160.0" progress="0.0" visible="false" />
    </children>
 </AnchorPane>
