--- a/src/main/resources/com/juanite/main.fxml
+++ b/src/main/resources/com/juanite/main.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -25,12 +26,18 @@
             <TableColumn fx:id="tc_completedPriority" prefWidth="47.0" text="Priority" />
          </columns>
       </TableView>
-      <Label alignment="CENTER" layoutX="248.0" layoutY="275.0" prefHeight="17.0" prefWidth="105.0" text="x" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="247.0" AnchorPane.topAnchor="275.0" />
-      <ImageView fitHeight="28.0" fitWidth="28.0" layoutX="211.0" layoutY="270.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="211.0" AnchorPane.topAnchor="270.0" />
-      <ImageView fitHeight="28.0" fitWidth="28.0" layoutX="362.0" layoutY="270.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="210.0" AnchorPane.topAnchor="270.0" />
+      <Label fx:id="lbl_printingDoc" alignment="CENTER" layoutX="248.0" layoutY="275.0" prefHeight="17.0" prefWidth="105.0" text="x" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="247.0" AnchorPane.topAnchor="275.0" />
+      <ImageView fitHeight="28.0" fitWidth="28.0" layoutX="211.0" layoutY="270.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="211.0" AnchorPane.topAnchor="270.0">
+         <image>
+            <Image url="@right_arrow.png" />
+         </image></ImageView>
+      <ImageView fitHeight="28.0" fitWidth="28.0" layoutX="362.0" layoutY="270.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="210.0" AnchorPane.topAnchor="270.0">
+         <image>
+            <Image url="@right_arrow.png" />
+         </image></ImageView>
       <Label alignment="CENTER" layoutX="397.0" layoutY="80.0" prefHeight="25.0" prefWidth="160.0" text="COMPLETED" AnchorPane.rightAnchor="43.0" AnchorPane.topAnchor="80.0" />
       <Label alignment="CENTER" layoutX="221.0" layoutY="219.0" prefHeight="25.0" prefWidth="160.0" text="PRINTING" AnchorPane.leftAnchor="221.0" AnchorPane.rightAnchor="219.0" AnchorPane.topAnchor="219.0" />
-      <Button fx:id="btn_stop" layoutX="311.0" layoutY="370.0" mnemonicParsing="false" onAction="#stopQueue" prefHeight="40.0" prefWidth="70.0" text="STOP" AnchorPane.rightAnchor="219.0" AnchorPane.topAnchor="370.0" />
+      <Button fx:id="btn_clear" layoutX="311.0" layoutY="370.0" mnemonicParsing="false" onAction="#clearQueue" prefHeight="40.0" prefWidth="70.0" text="CLEAR" AnchorPane.rightAnchor="219.0" AnchorPane.topAnchor="370.0" />
       <Label alignment="CENTER" layoutX="234.0" layoutY="46.0" prefHeight="34.0" prefWidth="135.0" text="PRINT QUEUE" AnchorPane.leftAnchor="232.0" AnchorPane.rightAnchor="232.0" AnchorPane.topAnchor="46.0">
          <font>
             <Font size="18.0" />
